--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "Not only about coding."
 baseurl: ""
 url: "http://mtasuandi.com/"
 title_description: "I try to track everything here, not only about coding but also stories."
-title_image: "http://www.gravatar.com/avatar/00000000000000000000000000000000?s=500&d=mm"
+title_image: "https://avatars0.githubusercontent.com/u/2455314?v=3&s=460"
 google_analytics: "UA-20365477-4"
 disqus_account: mtasuandi
 github_repository: https://github.com/mtasuandi/mtasuandi.github.io
